Mazes are displayed in columns, in order to fix alignment issue.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7,6 +7,10 @@ body {
     font-size: 0.8rem !important;
 }
 
+.card {
+    background: #FAFAFA;
+}
+
 .page-settings-dropdown {
     width: 250px;
     padding: 10px;
